--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-imagemin": "^0.7.0",
     "grunt-contrib-jade": "^0.11.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-stylus": "^0.16.0",
