--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "jquery.bem": "*",
     "isotope": "~2.0.1",
     "spin.js": "~2.0.1",
-    "history.js": "~1.8.0"
+    "history.js": "~1.8.0",
+    "html2canvas": "~0.4.1"
   },
   "moduleType": [
     "amd",
