--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "isotope": "~2.0.1",
     "spin.js": "~2.0.1",
     "history.js": "~1.8.0",
-    "html2canvas": "~0.4.1"
+    "html2canvas": "~0.4.1",
+    "imagesloaded": "~3.1.8"
   },
   "moduleType": [
     "amd",
