--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "spin.js": "~2.0.1",
     "history.js": "~1.8.0",
     "html2canvas": "~0.4.1",
-    "imagesloaded": "~3.1.8"
+    "imagesloaded": "~3.1.8",
+    "tooltip": "git@github.com:medelbou/Tooltip-for-Google-Maps.git"
   },
   "moduleType": [
     "amd",
