--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-csscomb": "^2.0.1",
     "grunt-newer": "^0.7.0",
     "grunt-notify": "^0.3.0",
+    "grunt-string-replace": "^1.0.0",
     "grunt-svgmin": "^0.4.0",
     "grunt-ziti": "0.0.4",
     "load-grunt-tasks": "^0.6.0"
