--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "Mars-Graduates",
+  "name": "Build",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-bower-task": "^0.3.4",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jade": "^0.11.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-nodeunit": "~0.3.3",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-stylus": "^0.16.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-csscomb": "^2.0.1",
-    "grunt-newer": "^0.7.0",
-    "grunt-notify": "^0.3.0",
-    "grunt-string-replace": "^1.0.0",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-ziti": "0.0.4",
-    "load-grunt-tasks": "^0.6.0"
+    "coffee-script": "^1.9.1"
+  },
+  "dependencies": {
+    "gulp": "^3.8.9",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-coffee": "^2.2.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-csscomb": "^3.0.3",
+    "gulp-cssmin": "^0.1.6",
+    "gulp-data": "^1.0.2",
+    "gulp-less": "^1.3.6",
+    "gulp-livereload": "^2.1.1",
+    "gulp-notify": "^2.0.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-replace": "^0.4.0",
+    "gulp-stylus": "^1.3.3",
+    "gulp-svgmin": "^0.4.7",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "gulp-watch": "^1.1.0",
+    "nib": "^1.0.4",
+    "run-sequence": "^1.0.1"
   }
 }
